# hw-gauge

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  module.nix  rust-toolchain.toml  scripts.nix  shell.nix
.github/workflows/: nix-ci.yml
daemon/: Cargo.toml
daemon/lib/: Cargo.toml
daemon/lib/src/: avg.rs  lib.rs
daemon/linux/: Cargo.toml
daemon/linux/src/: main.rs
daemon/src/: avg.rs  main.rs
daemon/windows/: Cargo.toml
daemon/windows/src/: main.rs
firmware/: Cargo.toml  Embed.toml  README.md  embed.gdb
firmware/.cargo/: config  config.toml
firmware/src/: gfx.rs  io.rs  main.rs  mono.rs  perf.rs
shared/: Cargo.toml
shared/src/: lib.rs  message.rs
win-service/: Cargo.toml
win-service/src/: main.rs
