[package]
name = "hw-gauge-firmware"
version = "0.1.0"
authors = ["James Hillyerd <james@hillyerd.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rtic = "1.1.3"
defmt = "0.3.0"
defmt-rtt = "0.3.2"
embedded-hal = "0.2.3"
embedded-graphics = "0.7.1"
fugit = "0.3.0"
heapless = "0.7.8"
mutex-trait = "0.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
postcard = "1.0.2"
rtic-core = "1.0.0"
rtic-monotonic = "1.0.0"
shared = { path = "../shared" }
ssd1306 = "0.6.0"
stm32-usbd = "0.6.0"
stm32f1xx-hal = { version = "0.9.0", features = ["rt", "stm32f103", "medium", "stm32-usbd" ] }
usb-device = "0.2.7"
usbd-serial = "0.1.1"

# Debug info does not occupy flash
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "z"
overflow-checks = false

# Default dev profile doesn't fit in 64KB flash
[profile.dev]
debug = true
opt-level = "z"

# Optimize dependencies for a smaller debug binary.
[profile.dev.package."*"]
codegen-units = 1
opt-level = "z"

[[bin]]
name = "hw-gauge-firmware"
test = false
bench = false
