[package]
name = "hw-gauge-firmware"
version = "0.2.0"
authors = ["James Hillyerd <james@hillyerd.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rtic = "1.1.3"
defmt = "0.3.0"
defmt-rtt = "0.3.2"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-hal = "0.2.5"
embedded-graphics = "0.7.1"
fugit = "0.3.0"
heapless = "0.7.8"
mipidsi = "0.5.0"
mutex-trait = "0.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
postcard = "1.0.2"
rtic-core = "1.0.0"
rtic-monotonic = "1.0.0"
shared = { path = "../shared" }
# rp2040-boot2 = "0.2.1"
# rp2040-hal = { version = "0.6.0", features = ["rt"] }
# The board will not boot with just a HAL.
rp-pico = "0.5.0"
rp2040-monotonic = "1.1.0"
usb-device = "0.2.7"
usbd-serial = "0.1.1"

[[bin]]
name = "hw-gauge-firmware"
test = false
bench = false

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
