[package]
name = "hw-gauge-firmware"
version = "0.3.0"
authors = ["James Hillyerd <james@hillyerd.com>"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
defmt = "1.0.1"
defmt-rtt = "1.1.0"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-hal = "1.0.0"
embedded-graphics = "0.7.1"
embedded-graphics-framebuf = "0.2.0"
fugit = "0.3.0"
heapless = "0.7.8"
mipidsi = "0.5.0"
mutex-trait = "0.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
portable-atomic = { version = "1", features = ["critical-section"] }
postcard = "1.0.2"
rtic = { version = "2.1.0", features = ["thumbv6-backend"] }
rtic-monotonics = { version = "2.1.0", features = ["rp2040"] }
shared = { path = "../shared", features = ["defmt-log"] }
rp2040-boot2 = "0.2.1"
rp2040-hal = { version = "0.11.0", features = ["rt", "rp2040-e5"] }
rtic-rp-monotonic = "0.1.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"

[[bin]]
name = "hw-gauge-firmware"
test = false
bench = false

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
