[package]
name = "shared"
version = "0.1.0"
authors = ["James Hillyerd <james@hillyerd.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.2.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
