[package]
name = "lib"
version = "0.1.0"
authors = ["James Hillyerd <james@hillyerd.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
once_cell = "1.7.2"
postcard = { version = "1.0.2", features = ["alloc"] }
shared = { path = "../../shared" }
systemstat = "0.2.1"
serialport = "4.0.0"
time = { version = "0.3.15", features = ["local-offset"] }
