[package]
name = "linux"
version = "0.1.0"
authors = ["James Hillyerd <james@hillyerd.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
lib = { path = "../lib" }
log = "0.4.14"

[[bin]]
name = "hw-cpu-daemon"
path = "src/main.rs"
