[package]
name = "windows"
version = "0.1.0"
authors = ["James Hillyerd <james@hillyerd.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
log = "0.4.14"
simplelog = "0.10.0"
windows-service = "0.3.1"

[[bin]]
name = "hw-cpu-winsvc"
path = "src/main.rs"